[gd_scene load_steps=22 format=3 uid="uid://cc1g0xs1ce6al"]

[ext_resource type="Script" path="res://Scripts/Levels/BubblegumPop.gd" id="1_b4pfb"]
[ext_resource type="Script" path="res://Scripts/Levels/AudioStreamRecord.gd" id="2_otn4g"]
[ext_resource type="Texture2D" uid="uid://d22ty7cnu5nw0" path="res://Assets/Bubblegum Pop/bubblegum-pop-background.png" id="2_ricd4"]
[ext_resource type="Texture2D" uid="uid://dkf3fwne5qrtc" path="res://Assets/Bubblegum Pop/bubble-size-1.png" id="3_2revj"]
[ext_resource type="Shader" path="res://Shaders/grayscale.gdshader" id="5_yb4oj"]
[ext_resource type="PackedScene" uid="uid://3jx3bsvdpka7" path="res://Scenes/Timer.tscn" id="6_r0ow3"]
[ext_resource type="Shader" path="res://Shaders/highlight.gdshader" id="7_nq5lf"]
[ext_resource type="AudioStream" uid="uid://dkh6dg3cau5fu" path="res://Audio/SFX/bubble pop 1.wav" id="8_amqi1"]
[ext_resource type="AudioStream" uid="uid://do5g7x7sv5agn" path="res://Audio/SFX/bubble pop 2.wav" id="9_f7tlg"]
[ext_resource type="AudioStream" uid="uid://b2efrhshlexbl" path="res://Audio/SFX/bubble pop 3.wav" id="10_cuorn"]
[ext_resource type="AudioStream" uid="uid://c6xs5ppecbekc" path="res://Audio/SFX/bubble pop 4.wav" id="11_1m3ag"]
[ext_resource type="AudioStream" uid="uid://0u6jchw30q2k" path="res://Audio/SFX/bubble pop 5.wav" id="12_3etxl"]
[ext_resource type="AudioStream" uid="uid://d3tvto33qwr6c" path="res://Audio/SFX/bubble pop 6.wav" id="13_pbtbo"]
[ext_resource type="AudioStream" uid="uid://ktlkxttmjl6v" path="res://Audio/SFX/bubble pop 7.wav" id="14_oancb"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_7mi8s"]

[sub_resource type="Animation" id="Animation_ahi3l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechbubbleScream:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GrayScale:material:shader_parameter/gray_a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wukbn"]
resource_name = "fade_gray"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrayScale:material:shader_parameter/gray_a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.392292, 1.62451),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ncu30"]
_data = {
"RESET": SubResource("Animation_ahi3l"),
"fade_gray": SubResource("Animation_wukbn")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_23au6"]
shader = ExtResource("5_yb4oj")
shader_parameter/gray_a = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e63mf"]
shader = ExtResource("7_nq5lf")
shader_parameter/Line_Smoothness = 0.045
shader_parameter/Line_Width = 0.054
shader_parameter/Brightness = 3.0
shader_parameter/Rotation_deg = 30.0
shader_parameter/Distortion = 1.8
shader_parameter/Speed = 0.7
shader_parameter/Position = 0.0
shader_parameter/Position_Min = 0.25
shader_parameter/Position_Max = 0.5
shader_parameter/Alpha = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xu1gi"]
streams_count = 7
stream_0/stream = ExtResource("8_amqi1")
stream_1/stream = ExtResource("9_f7tlg")
stream_2/stream = ExtResource("10_cuorn")
stream_3/stream = ExtResource("11_1m3ag")
stream_4/stream = ExtResource("12_3etxl")
stream_5/stream = ExtResource("13_pbtbo")
stream_6/stream = ExtResource("14_oancb")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_b4pfb")

[node name="AudioStreamRecord" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamMicrophone_7mi8s")
autoplay = true
bus = &"Record"
script = ExtResource("2_otn4g")
success_increments = 0.01
threshhold = -5
levels = 0

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_ricd4")
centered = false

[node name="Bubble" type="Sprite2D" parent="."]
texture = ExtResource("3_2revj")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ncu30")
}

[node name="GrayScale" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_23au6")
offset_right = 1280.0
offset_bottom = 960.0

[node name="LevelTimer" parent="." instance=ExtResource("6_r0ow3")]
offset_left = 0.0
offset_top = 0.0
offset_right = 1280.0
offset_bottom = 960.0

[node name="Highlight" type="ColorRect" parent="."]
visible = false
z_index = 5
material = SubResource("ShaderMaterial_e63mf")
offset_right = 1280.0
offset_bottom = 960.0

[node name="WinningTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PopSFXPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_xu1gi")

[connection signal="level_complete" from="AudioStreamRecord" to="." method="_on_audio_stream_record_level_complete"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeDone" from="LevelTimer" to="." method="_on_level_timer_time_done"]
[connection signal="timeout" from="WinningTimer" to="." method="_on_winning_timer_timeout"]
